# GemSc

./: .clang-format  CMakeLists.txt  README.md
configs/example_hier2/: chip.json  cpu_cluster.json  mem.json
docs/: AI_DEV_GUIDELINES.md  API_REFERENCE.md  BUILD_AND_TEST.md  CONFIGURATION_SYSTEM.md  EXTENSION_SYSTEM.md  MODULE_DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  STATS_SYSTEM.md  TIMING_MODEL.md  TimingModel.md  USER_GUIDE.md
include/core/: cmd.hh  master_port.hh  packet.hh  packet_pool.hh  port_manager.hh  sim_object.hh  slave_port.hh  virtual_channel.hh
include/core/ext/: cmd_exts.hh  packet_pool.hh  packet_to_payload.hh  payload_to_packet.hh
include/ext/: credit_stream.hh  mem_exts.hh
include/modules/: arbiter.hh  cache_sim.hh  cpu_cluster.hh  cpu_sim.hh  crossbar.hh  memory_sim.hh  router.hh  traffic_gen.hh
include/sc_core/: sc_adapter.hh  sc_initiator_adapter.hh  sc_multiport_target.hh  sc_object.hh  sc_target_adapter.hh  sc_wrapper.hh
include/utils/: module_group.hh  regex_matcher.hh
python/: noc_builder.py  noc_mesh.py
samples/simple1/: CMakeLists.txt
src/: main.cpp  sc_main.cpp
src/noc/: filt.hh  flit_extension.hh  nic.cc  nic_sc.cc  packet_utils.cc  router.cc  router_sc.cc  router_sc.hh  sc_module.cc  sc_module.hh  sc_module_intf.hh
src/packet/: packet.cc
src/sc_core/: sc_wrapper.cc
test/: CMakeLists.txt  mock_modules.hh  test_config_loader.cc  test_connection_resolution.cc  test_credit_flow.cc  test_debug_log_system.cc  test_end_to_end_delay.cc  test_json_includer.cc  test_latency_injection.cc  test_layout_styles.cc  test_module_group.cc  test_module_registration.cc  test_packet_pool.cc  test_regex_matching.cc  test_response_path.cc  test_stats_accuracy.cc  test_tlm_ext.cc  test_valid_only.cc  test_valid_ready.cc  test_virtual_channel.cc  test_wildcard_matching.cc
